--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -33,6 +33,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 10px;
 }
 .profileInfoName{
     font-size: 24px;
